--- a/Tema 1/hola.html
+++ b/Tema 1/hola.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
-<head>
-  <title>Sir Livingstone</title>
-</head>
-<body>
-<p>hola</p>
-</body>
+  <head>
+    <meta charsest="utf-8">
+    <title>Sir Livingstone</title>
+  </head>
+  <body>
+    <p>hola</p>
+  </body>
 </html>
