--- a/Tema1/prueba.html
+++ b/Tema1/prueba.html
@@ -5,7 +5,11 @@
     <title>HolaMundo</title>
     <script type="test/javascript">
       var t = "Esto es un texto";
-      
+      //Esto es un comentario de linea
+      /*Esto es un comentario de párrafo */
+
+    </script>
+    <script src="js/mensaje.js" charset="utf-8">
     </script>
   </head>
   <body>
