--- a/Tema1/prueba.html
+++ b/Tema1/prueba.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+     <noscript>
+      <h2>Error: </h2>
+      <p>Habilita en tu navegador la opción de JS para ver toda la funcionalidad</p>
+    </noscript>
     <meta charset="utf-8">
     <title>HolaMundo</title>
-    <script type="test/javascript">
+    <script>
       var t = "Esto es un texto";
       //Esto es un comentario de linea
       /*Esto es un comentario de párrafo */
@@ -13,6 +17,7 @@
     </script>
   </head>
   <body>
+    <h1 onclick="alert('Has \'hecho\' click')">Título</h1>
     <p>
       Esto es el contenido del body.
 
