--- a/Tema1/Ejercicio1/ejercicio1.html
+++ b/Tema1/Ejercicio1/ejercicio1.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <noscript>
+      <h2>Aviso! La ejecución de javascript en tu
+      navegador está desactivado!</h2>
 
     </noscript>
     <meta charset="utf-8">
@@ -10,10 +12,13 @@
       var t = "Alerta";
       alert(t);
       alert("Alerta número 2");
-      
+      //Comentario número 1
+      /*Comentario número 2 */
     </script>
   </head>
   <body>
+    <p>
 
+    </p>
   </body>
 </html>
