--- a/Tema1/prueba.html
+++ b/Tema1/prueba.html
@@ -3,7 +3,8 @@
   <head>
      <noscript>
       <h2>Error: </h2>
-      <p>Habilita en tu navegador la opción de JS para ver toda la funcionalidad</p>
+      <p>Habilita en tu navegador la opción de JS
+        para ver toda la funcionalidad</p>
     </noscript>
     <meta charset="utf-8">
     <title>HolaMundo</title>
