--- a/Tema1/Ejercicio2/ejercicio1.html
+++ b/Tema1/Ejercicio2/ejercicio1.html
@@ -11,11 +11,9 @@
     <script type="text/javascript">
       var t = "Alerta";
       alert(t);
-
+      alert("Alerta número 2");
       //Comentario número 1
       /*Comentario número 2 */
-    </script>
-    <script src="js/ex2.js" charset="utf-8">
     </script>
   </head>
   <body>
