--- a/Tema1/Ejercicio2/ejercicio1.html
+++ b/Tema1/Ejercicio2/ejercicio1.html
@@ -15,6 +15,7 @@
       //Comentario número 1
       /*Comentario número 2 */
     </script>
+    <script src="ex2.js" charset="utf-8"></script>
   </head>
   <body>
     <p>
