--- a/Tema1/Ejercicio2/UnoyDos.html
+++ b/Tema1/Ejercicio2/UnoyDos.html
@@ -15,7 +15,7 @@
       //Comentario número 1
       /*Comentario número 2 */
     </script>
-    <script src="ex2.js" charset="utf-8"></script>
+    <script src="Scriptunoydsos.js" charset="utf-8"></script>
   </head>
   <body>
     <p>
