--- a/Tema1/Práctica 2/TresyCuatro.html
+++ b/Tema1/Práctica 2/TresyCuatro.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Ejercicios tres y cuatro</title>
     <script type="text/javascript">
-    console.error("Esto es un error");
-    Document.write("esto es un document.write");
-    alert("Esto es una alerta");
+
+    alert("Esto es \'una\' \"alerta\"");
     </script>
+    <script src="Scripttresycuatro.js" charset="utf-8"></script>
   </head>
   <body>
       <p>
