--- a/Tema1/Práctica 2/U2Ej5script.html
+++ b/Tema1/Práctica 2/U2Ej5script.html
@@ -6,6 +6,12 @@
 
   </head>
   <body>
-    <script src="U2Ej5script.js" charset="utf-8"></script>
+
+    <script type="text/javascript">
+    var variable = prompt("Escribe tu color favorito en inglés.");
+    console.log(variable);
+    document.bgColor = variable;
+    console.log(document.bgColor);
+    </script>
   </body>
 </html>
