--- a/EntregaPrácticasDWEC/Práctica2/U2Ej5script.html
+++ b/EntregaPrácticasDWEC/Práctica2/U2Ej5script.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-      <script src="U2Ej5script.js" charset="utf-8"></script>
 
-      
   </head>
   <body>
 
+    <script type="text/javascript">
+    var variable = prompt("Escribe tu color favorito en inglés.");
+    console.log(variable);
+    document.bgColor = variable;
+    console.log(document.bgColor);
+    </script>
+    
   </body>
 </html>
