--- a/EntregaPracticasDWEC/Practica3/ex3.html
+++ b/EntregaPracticasDWEC/Practica3/ex3.html
@@ -7,12 +7,7 @@
   <body>
     <script type="text/javascript">
       var num = prompt("Escribe un número");
-      if(num % 0 == 0){
-        document.write("Tu número es par.");
-      }else {
-        document.write("Tu número es impar");
-      }
-
+      (num % 0 == 0)?document.write("Tu número es par."):document.write("Tu número es impar");
 
     </script>
   </body>
