--- a/EntregaPracticasDWEC/practica4/ex2.html
+++ b/EntregaPracticasDWEC/practica4/ex2.html
@@ -9,10 +9,10 @@
       var y = prompt("Introduce edad, intento de si (valor 20)") || 18;
       var x = prompt("Introduce edad, intento de no (valor 7)") || 18;
       var MayorEdad = function(num){
-        (num >= 18)?document.write("Si <br>"):document.write("No<br>");
-        // if(num >=18){
-        //   document.write("Sí");
-        // }
+        // (num >= 18)?document.write("Si <br>"):document.write("No<br>");
+        if(num >=18){
+          document.write("Sí");
+        }
       }
 
      MayorEdad(y);
