--- a/EntregaPracticasDWEC/practica4/ex8.html
+++ b/EntregaPracticasDWEC/practica4/ex8.html
@@ -6,21 +6,21 @@
   </head>
   <body>
     <script type="text/javascript">
-     function cocatena(v1, v2){
-       if(typeof(v1 == "string") && typeof(v2 == "string")){
+     var concatena = function(v1, v2){
+       if(typeof(v1)== "string" && typeof(v2 )== "string"){
           var v3 = v1 + " " + v2;
          return v3;
        }else{
          document.write("Tus valores no son strings.");
        }
      }
-     function saludar(){
-       var x =  prompt("Introduce tu nombre");
-        var y =  prompt("Introduce tu apellido");
-        var fin = cocatena(x,y);
-        document.write("Buenos días " + fin);
+     function saludador(concatena,nombre){
+        var h = "Buenos Dias";
+
+        document.write(concatena(h,nombre));
      }
-     saludar();
+     var nom = "Guillermo Soriano";
+     saludador(concatena,nom);
     </script>
   </body>
 </html>
