--- a/EntregaPracticasDWEC/Opcionales/primo.html
+++ b/EntregaPracticasDWEC/Opcionales/primo.html
@@ -7,11 +7,13 @@
   <body>
     <script type="text/javascript">
       function primo(){
-
+        var valor = 1;
         for(var i = 1; i <= 100; i++){
-          if(i/i == 1 && i/1 == i){
+
+          if(valor/i != Math.round(valor/i) && i==1 && i==valor){
             document.write(i +"<br>");
           }
+          valor++;
         }
       }
     </script>
