--- a/EntregaPracticasDWEC/Practica3/ex2.html
+++ b/EntregaPracticasDWEC/Practica3/ex2.html
@@ -6,19 +6,30 @@
   </head>
   <body>
     <script type="text/javascript">
-      var X = 3/0;
-      var Y = 0/0;
-      var Z = null;
-      var A = undefined;
-      var suma1 = X++;
-      var suma2 = Y++;
-      var suma3 = Z++;
-      var suma4 = A++;
-
+      var X;
+      X= 3/0;
+      var Y;
+      Y= 0/0;
+      var Z;
+      Z= null;
+      var A;
+      A= undefined;
+      var suma1;
+      var suma2;
+      var suma3;
+      var suma4;
       document.write("La X tiene el valor " + X + " y es de tipo " + typeof(X) + "<br>");
       document.write("La Y tiene el valor " + Y + " y es de tipo " + typeof(Y) + "<br>");
       document.write("La Z tiene el valor " + Z + " y es de tipo " + typeof(Z) + "<br>");
       document.write("La A tiene el valor " + A + " y es de tipo " + typeof(A) + "<br>");
+
+      suma1 = X++;
+
+      suma2 = Y++;
+
+      suma3 = Z++;
+
+      suma4 = A++;
       document.write("La suma1 tiene el valor " + suma1 + " y es de tipo " + typeof(suma1) + "<br>");
       document.write("La suma2 tiene el valor " + suma2 + " y es de tipo " + typeof(suma2) + "<br>");
       document.write("La suma3 tiene el valor " + suma3 + " y es de tipo " + typeof(suma3) + "<br>");
