--- a/EntregaPracticasDWEC/Practica3/ex7.html
+++ b/EntregaPracticasDWEC/Practica3/ex7.html
@@ -29,7 +29,7 @@
             alert("Estás a viernes, y te quedan 1 día para el próximo fin de semana.");
             break;
         case 6:
-            alert("Estás a sábado, tu fin de semana acaba, y ya estás en fin de semana.");
+            alert("Estás a sábado, ya estás en fin de semana.");
             break;
 
       }
