--- a/EntregaPracticasDWEC/Opcionales/Dado.html
+++ b/EntregaPracticasDWEC/Opcionales/Dado.html
@@ -11,10 +11,11 @@
         var f = Math.floor(Math.random() * 6)+ 1;
 
 
-          document.write("  <img width = '400px' height = '400px'  src='dado" + f + ".jpg' alt='dado1'>");
-          document.write("<button onclick='saltar()'> Vuelve a intentarlo</button>");
+          return f;
 
       }
+      document.write("  <img width = '400px' height = '400px'  src='dado" + saltar() + ".jpg' alt='dado'>");
+      document.write("<button onclick='saltar()'> Vuelve a intentarlo</button>");
     </script>
     <button onclick="saltar()">Dale para lanzar el dado</button>
   </body>
