--- a/EntregaPracticasDWEC/U2.objetos/Ex4-5-6-9-10.html
+++ b/EntregaPracticasDWEC/U2.objetos/Ex4-5-6-9-10.html
@@ -69,7 +69,7 @@
           pass = pass.concat(x);
           return pass;
         }
-
+        //Ejercicio 6
       var lista = new Array(3);
       var nota = prompt("nota alumno1?");
       var nota2 = prompt("nota alumno2?");
@@ -77,6 +77,7 @@
       nota = parseInt(nota);
       nota2 = parseInt(nota2);
       nota3 = parseInt(nota3);
+
       var alumno1 = new Estudiante("Blanca","Perez Nuñez", "Eso", nota);
       var alumno2 = new Estudiante("Juanita","Gomez Olmo", "bachiller", nota2);
       var alumno3 = new Estudiante("Ana","Soriano Gracia", "Master", nota3);
