--- a/EntregaPracticasDWEC/U2.objetos/Ex2.html
+++ b/EntregaPracticasDWEC/U2.objetos/Ex2.html
@@ -14,7 +14,7 @@
       cochePrimero.Color = "Dorado";
       cochePrimero.Plazas = 2;
       cochePrimero.cambiarColor = function(){
-       color="Blanco"
+       this.color="Blanco"
      }
 
       var cocheSegundo = new Object();
@@ -23,7 +23,7 @@
       cocheSegundo.Color = "Gris";
       cocheSegundo.Plazas = 5;
       cocheSegundo.cambiarColor = function(){
-       color="Blanco"
+       this.color="Blanco"
       }
 
       console.log("Borro Plazas");
