--- a/EntregaDiseño/Práctica3Bootstrap/ex1.html
+++ b/EntregaDiseño/Práctica3Bootstrap/ex1.html
@@ -42,29 +42,29 @@
 
     <div class="container">
       <div class="row">
-        <div class="cabecera col-xs-12 col-sm-12 col-md-12 col-ld-12 col-xl-12"></div>
+        <div class="cabecera col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12"></div>
       </div>
       <div class="row">
-        <div class="cajaRoja d-none d-sm-block col-sm-3 col-md-3 col-ld-3 col-xl-3 "></div>
-        <div class="cuerpo col-xs-9 col-sm-9 col-md-9 col-ld-9 col-xl-9">
+        <div class="cajaRoja d-none d-sm-block col-sm-3 col-md-3 col-lg-3 col-xl-3 "></div>
+        <div class="cuerpo col-xs-9 col-sm-9 col-md-9 col-lg-9 col-xl-9">
           <div class="row">
-                <div class="cajaRosa col-xs-12 col-sm-12 col-md-12 col-ld-12 col-xl-12"></div>
+                <div class="cajaRosa col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12"></div>
           </div>
           <div class="row">
-            <div class="cajaNaranja col-xs-12 col-sm-12 col-md-6 col-ld-6 col-xl-6"></div>
-            <div class="cajaNaranja col-xs-12 col-sm-12 col-md-6 col-ld-6 col-xl-6"></div>
+            <div class="cajaNaranja col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6"></div>
+            <div class="cajaNaranja col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6"></div>
           </div>
           <div class="row">
-            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-ld-2 col-xl-2"></div>
-            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-ld-2 col-xl-2"></div>
-            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-ld-2 col-xl-4"></div>
-            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-ld-2 col-xl-2"></div>
-            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-ld-2 col-xl-2"></div>
-            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-ld-2 col-xl-2"></div>
-            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-ld-2 col-xl-2"></div>
-            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-ld-2 col-xl-4"></div>
-            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-ld-2 col-xl-2"></div>
-            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-ld-2 col-xl-2"></div>
+            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2"></div>
+            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2"></div>
+            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-lg-2 col-xl-4"></div>
+            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2"></div>
+            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2"></div>
+            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2"></div>
+            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2"></div>
+            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-lg-2 col-xl-4"></div>
+            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2"></div>
+            <div class="cajaAzul col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2"></div>
           </div>
         </div>
       </div>
