--- a/EntregaDiseño/Práctica3Bootstrap/ex2.html
+++ b/EntregaDiseño/Práctica3Bootstrap/ex2.html
@@ -48,7 +48,7 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="cabecera col-xs-12 col-sm-12 col-md-12 col-ld-12 col-xl-12">Header</div>
+        <div class="cabecera col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">Header</div>
       </div>
       <div class="row">
         <div class="cajaAzul offset-xl-3 offset-lg-3 offset-md-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-6">1</div>
@@ -77,7 +77,7 @@
         <div class="cajaNaranja offset-xl-3 offset-lg-3 offset-md-3 col-xl-3 col-lg-3 col-md-3 col-sm-6 col-12 d-none d-sm-block order-xl-1 order-lg-1 order-md-1">:(</div>
       </div>
       <div class="row">
-        <div class="pie d-none d-sm-block col-sm-12 col-md-12 col-ld-12 col-xl-12">Footer</div>
+        <div class="pie d-none d-sm-block col-sm-12 col-md-12 col-lg-12 col-xl-12">Footer</div>
       </div>
     </div>
 
