--- a/EntregaPracticasDWEC/U4.EjerciciosEventos/ex4.html
+++ b/EntregaPracticasDWEC/U4.EjerciciosEventos/ex4.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <img src="foto1" width="100px">
+    <img src="foto1.jpg" width="100px">
 <script type="text/javascript">
 var image = document.getElementsByTagName('img')[0];
 image.addEventListener("mouseover",function(e){
