--- a/EntregaPracticasDWEC/U4.EjerciciosEventos/ex8.html
+++ b/EntregaPracticasDWEC/U4.EjerciciosEventos/ex8.html
@@ -18,7 +18,7 @@
         if(imagen.width<1000){
           imagen.width +=25;
         }else if(imagen.width==1000){
-          imagen.width+=24
+          imagen.width+=24;
         }
       }
       if(e.key=="-"){
