--- a/EntregaPracticasDWEC/U4.EjerciciosEventos/ex7.html
+++ b/EntregaPracticasDWEC/U4.EjerciciosEventos/ex7.html
@@ -26,9 +26,7 @@
 
       function enseñarEspecial(e) {
        if (tecla){
-         var text = '';
-         text = "Especial " + e.keyCode + " la cual es -->" + e.key + "<hr>";
-         console.log("Especial: " + text);
+         console.log("Especial " + e.keyCode + " la cual es -->" + e.key + "<hr>");
        }
       }
 
