--- a/EntregaPracticasDWEC/U4.EjerciciosEventos/ex7.html
+++ b/EntregaPracticasDWEC/U4.EjerciciosEventos/ex7.html
@@ -24,7 +24,7 @@
 
       function enseñarEspecial(e) {
        if (tecla){
-         console.log(e.keyCode + " la cual es -->" + e.key + "<hr>");
+         console.log("Caracter Ascii: " + e.keyCode + " la cual es -->" + e.key + "<hr>");
        }
       }
 
