--- a/EntregaPracticasDWEC/EscogeRegalo/regalo.html
+++ b/EntregaPracticasDWEC/EscogeRegalo/regalo.html
@@ -13,9 +13,24 @@
     img{
       width: 300px;
     }
-    p{
+    #p1{
       width: 100px;
       height: 100px;
+      margin:auto;
+      font-weight: bold;
+    }
+    #p2{
+      width: 100px;
+      height: 100px;
+      margin:auto;
+      font-weight: bold;
+    }
+    #p3{
+      width: 100px;
+      height: 100px;
+      margin:auto;
+      font-style: italic;
+      font-weight: bold;
     }
     div div{
       width: 300px;
@@ -31,69 +46,75 @@
   </head>
   <body>
     <h1>Escoge tu regalo!</h1>
-    <p class="p1"></p>
-    <p class="p2"></p>
-    <p class="p3"></p>
+    <div id="p1"></div>
+    <div id="p2"></div>
+    <div id="p3"></div>
     <div class="contenedor">
       <div id="midiv1">?</div>
       <div id="midiv2">?</div>
       <div id="midiv3">?</div>
     </div>
     <script type="text/javascript">
+      onload = function(){
+          midiv1.oncontextmenu = function(e){
+            e.preventDefault();
+            p1.innerHTML="Pista1: Condúcelo";
+          }
+          midiv2.oncontextmenu = function(e){
+            e.preventDefault();
+            p2.innerHTML="Pista2: Superhéroe!";
+          }
+          midiv3.oncontextmenu = function(e){
+            e.preventDefault();
+            p3.innerHTML="Pista3: Adoptado";
+          }
 
 
+        midiv1.addEventListener("click",cambiar1);
+        function cambiar1(e){
+          midiv1.innerHTML = "";
+          var imagen1 = document.createElement("img");
+          imagen1.setAttribute("src", "foto1.jpg");
+          imagen1.style.width="300px";
+          midiv1.appendChild(imagen1);
+            midiv1.style.background = "white";
 
+          alert("Tu premio es un coche");
+          midiv2.removeEventListener("click",cambiar2);
+          midiv3.removeEventListener("click",cambiar3);
+            midiv2.addEventListener("click",function(){alert("Tu premio es un coche");});
+            midiv3.addEventListener("click",function(){alert("Tu premio es un coche");});
+        }
+        midiv2.addEventListener("click",cambiar2);
+        function cambiar2(e){
+          midiv2.innerHTML = "";
+          var imagen2 = document.createElement("img");
+          imagen2.setAttribute("src", "foto2.jpg");
+          imagen2.style.width="300px";
+          alert("Tu premio es ultrapotato");
+          midiv2.appendChild(imagen2);
+            midiv2.style.background = "white";
+          midiv1.removeEventListener("click",cambiar1);
+          midiv3.removeEventListener("click",cambiar3);
+          midiv1.addEventListener("click",function(){alert("Tu premio es ultrapotato");});
+          midiv3.addEventListener("click",function(){alert("Tu premio es ultrapotato");});
 
-      // p1.oncontextmenu = function(e){
-      //   p1.preventDefault();
-      //   p1.innerHTML="Condúcelo";
-      // }
-      // p2.oncontextmenu = function(e){
-      //   p2.preventDefault();
-      //   p2.innerHTML="Superhéroe!";
-      // }
-      // p3.oncontextmenu = function(e){
-      //   p3.preventDefault();
-      //   p3.innerHTML="Adoptado";
-      // }
-
-    midiv1.addEventListener("click",cambiar1);
-    function cambiar1(e){
-      var imagen1 = document.createElement("img");
-      imagen1.setAttribute("src", "foto1.jpg");
-      imagen1.style.width="300px";
-      midiv1.appendChild(imagen1);
-      alert("Tu premio es un coche");
-      midiv2.removeEventListener("click",cambiar2);
-      midiv3.removeEventListener("click",cambiar3);
-        midiv2.addEventListener("click",function(){alert("Tu premio es un coche");});
-        midiv3.addEventListener("click",function(){alert("Tu premio es un coche");});
-    }
-    midiv2.addEventListener("click",cambiar2);
-    function cambiar2(e){
-      var imagen2 = document.createElement("img");
-      imagen2.setAttribute("src", "foto2.jpg");
-      imagen2.style.width="300px";
-      alert("Tu premio es ultrapotato");
-      midiv2.appendChild(imagen2);
-      midiv1.removeEventListener("click",cambiar1);
-      midiv3.removeEventListener("click",cambiar3);
-      midiv1.addEventListener("click",function(){alert("Tu premio es ultrapotato");});
-      midiv3.addEventListener("click",function(){alert("Tu premio es ultrapotato");});
-
-    }
-    midiv3.addEventListener("click",cambiar3);
-    function cambiar3(e){
-      var imagen3 = document.createElement("img");
-      imagen3.setAttribute("src", "foto3.jpg");
-      imagen3.style.width="300px";
-      alert("Tu premio son unas gafas");
-      midiv3.appendChild(imagen3);
-      midiv2.removeEventListener("click",cambiar2);
-      midiv1.removeEventListener("click",cambiar1);
-      midiv2.addEventListener("click",function(){alert("Tu premio son unas gafas");});
-      midiv1.addEventListener("click",function(){alert("Tu premio son unas gafas");});
-    }
+        }
+        midiv3.addEventListener("click",cambiar3);
+        function cambiar3(e){
+          midiv3.innerHTML = "";
+          var imagen3 = document.createElement("img");
+          imagen3.setAttribute("src", "foto3.jpg");
+          imagen3.style.width="300px";
+          alert("Tu premio son unas gafas");
+          midiv3.appendChild(imagen3);
+          midiv3.style.background = "white";
+          midiv2.removeEventListener("click",cambiar2);
+          midiv1.removeEventListener("click",cambiar1);
+          midiv2.addEventListener("click",function(){alert("Tu premio son unas gafas");});
+          midiv1.addEventListener("click",function(){alert("Tu premio son unas gafas");});
+        }
+      }
     </script>
   </body>
 </html>
