--- a/EntregaPracticasDWEC/EscogeRegalo/regalo.html
+++ b/EntregaPracticasDWEC/EscogeRegalo/regalo.html
@@ -8,7 +8,6 @@
     <style media="screen">
     *, .contenedor{
           text-align: center;
-
     }
     img{
       width: 300px;
@@ -17,12 +16,14 @@
       width: 100px;
       height: 100px;
       margin:auto;
+      font-style: italic;
       font-weight: bold;
     }
     #p2{
       width: 100px;
       height: 100px;
       margin:auto;
+      font-style: italic;
       font-weight: bold;
     }
     #p3{
@@ -58,7 +59,7 @@
       onload = function(){
           midiv1.oncontextmenu = function(e){
             e.preventDefault();
-            p1.innerHTML="Pista1: Condúcelo";
+            p1.innerHTML="Pista1: Condúcelo!";
           }
           midiv2.oncontextmenu = function(e){
             e.preventDefault();
@@ -66,7 +67,7 @@
           }
           midiv3.oncontextmenu = function(e){
             e.preventDefault();
-            p3.innerHTML="Pista3: Adoptado";
+            p3.innerHTML="Pista3: Podrás ver perfectamente!";
           }
 
 
