--- a/EntregaDiseño/PrácticaRedimensionarImagenes/principal.html
+++ b/EntregaDiseño/PrácticaRedimensionarImagenes/principal.html
@@ -209,12 +209,16 @@
         display: none;
       }
       .logo{
-        width:13%;
-        height:13%;
+        width:25%;
+        height:16%;
         margin:5%;
         margin-top: 7%;
         margin-left: 7%;
         margin-right: -2%;
+      }
+      .titulo{
+        width:50%;
+        height: 13%;
       }
     }
     </style>
