--- a/EntregaDiseño/webAccesibilidad/webRecetasNoAccesible.html
+++ b/EntregaDiseño/webAccesibilidad/webRecetasNoAccesible.html
@@ -38,7 +38,7 @@
         <p>Como en casa en ningún sitio!</p>
       </div>
       <div id="logo">
-        <img src="logo.png" width="85">
+        <img src="logo.png" alt="Logo de la abuela.">
       </div>
     </div>
 
@@ -54,23 +54,23 @@
 <div id="contenido">
 
 <div id="presentacion">
-  <h2>Bienvenido a la web de recetas.</h2>
+  <h1>Bienvenido a la web de recetas.</h1>
   <p>
     Esta es una web dedicada a las recetas que hemos tomado en casa toda la vida. Como decía mi abuela:
     <span>Aprofita nen! Com es menja a casa no es menja enlloc!</span>
   </p>
   <p>
-    Pulsa sobre el tipo de receta que te interese y ponte <b>manos a la obra!</b>
+    Pulsa sobre el tipo de receta que te interese y ponte <strong>manos a la obra!</strong>
   </p>
   <p>Bon Appetit!</p>
 
-  <h3><a href="#primeros" onclick="visualiza('primeros'); return false;">Entrantes y Primeros platos</a></h3>
+  <h2><a href="#primeros" onclick="visualiza('primeros'); return false;">Entrantes y Primeros platos</a></h2>
   Aperitivos, ensaladas, sopas y cremas.
 
-  <h3><a href="#segundos" onclick="visualiza('segundos'); return false;">Segundos: El plato fuerte!</a></h3>
+  <h2><a href="#segundos" onclick="visualiza('segundos'); return false;">Segundos: El plato fuerte!</a></h2>
   Pasta, arroces, carnes y pescados.
 
-  <h3><a href="#postres" onclick="visualiza('postres'); return false;">Deja hueco para los Postres</a></h3>
+  <h2><a href="#postres" onclick="visualiza('postres'); return false;">Deja hueco para los Postres</a></h2>
   Conoce las técnicas para cocinar los mejores postres caseros.
 </div>
 
