--- a/EntregaDiseño/webAccesibilidad/webRecetasNoAccesible.html
+++ b/EntregaDiseño/webAccesibilidad/webRecetasNoAccesible.html
@@ -53,17 +53,17 @@
      </div>
 <!-- Inicio de contenido -->
 <div id="contenido">
-
+<p class="oculta">Aquí empieza el contenido de la página. </p>
 <div id="presentacion">
   <h1>Bienvenido a la web de recetas.</h1>
   <p>
     Esta es una web dedicada a las recetas que hemos tomado en casa toda la vida. Como decía mi abuela:
-    <span>Aprofita nen! Com es menja a casa no es menja enlloc!</span>
+    <span lang="ca">Aprofita nen! Com es menja a casa no es menja enlloc!</span>
   </p>
   <p>
     Pulsa sobre el tipo de receta que te interese y ponte <strong>manos a la obra!</strong>
   </p>
-  <p>Bon Appetit!</p>
+  <p lang="fr">Bon Appetit!</p>
 
   <h2><a href="#primeros" onclick="visualiza('primeros'); return false;">Entrantes y Primeros platos</a></h2>
   Aperitivos, ensaladas, sopas y cremas.
@@ -112,6 +112,7 @@
 </ul>
 </div>
 </div>
+<p class="oculta">Aquí empieza el menu lateral de la página. </p>
 <div id="lateral">
   <h3>Síguenos</h3>
   <ul>
@@ -126,7 +127,7 @@
     <li><a href="#">Recetas en 4 min</a></li>
   </ul>
 </div>
-
+<p class="oculta">Aquí empieza el pie de la página. </p>
 <div id="pie">
 <ul>
   <!-- Aquí van los iconos de accesibilidad y la explicación sobre accesibilidad -->
