--- a/EntregaDiseño/webAccesibilidad/webRecetasNoAccesible.html
+++ b/EntregaDiseño/webAccesibilidad/webRecetasNoAccesible.html
@@ -39,7 +39,7 @@
         <p>Como en casa en ningún sitio!</p>
       </div>
       <div id="logo">
-        <img src="logo.png" alt="Logo de la abuela, el cual representa a la web y a la empresa.">
+        <a href="http://canalcocina.es/programa/la-abuela-lolita"><img src="logo.png" alt="Logo de la abuela, el cual representa a la web y a la empresa. Si haces click te llevará a Canal Cocina en el programa de la cocina de la abuela Lolita"></a>
       </div>
     </div>
 
