--- a/EntregaDiseño/webAccesibilidad/webRecetasNoAccesible.html
+++ b/EntregaDiseño/webAccesibilidad/webRecetasNoAccesible.html
@@ -35,11 +35,12 @@
   <body>
     <div id="titulo">
       <div id="texto">
+        <a href="#" class="oculta"></a>
         <h1>Recetas de la abuela</h1>
         <p>Como en casa en ningún sitio!</p>
       </div>
       <div id="logo">
-        <a href="http://canalcocina.es/programa/la-abuela-lolita"><img src="logo.png" alt="Logo de la abuela, el cual representa a la web y a la empresa. Si haces click te llevará a Canal Cocina en el programa de la cocina de la abuela Lolita"></a>
+        <a href="http://canalcocina.es/programa/la-abuela-lolita"><img src="logo.png" alt="Logo de la abuela. Si haces click te llevará a Canal Cocina en el programa de la cocina de la abuela Lolita"></a>
       </div>
     </div>
 
