--- a/EntregaDiseño/webAccesibilidad/tortillaPatata.html
+++ b/EntregaDiseño/webAccesibilidad/tortillaPatata.html
@@ -7,8 +7,9 @@
     <title>Página web de la abuelita y la receta de la tortilla de patata!</title>
   </head>
   <body>
-
+        <h1 class="torti">Elaboración de la Tortilla de patata</h1>
         <table>
+          <caption>Tortilla de patatas</caption>
           <tr>
             <th>Ingredientes</th>
             <th>Cantidad</th>
@@ -34,8 +35,9 @@
             <img class="foto" src="tortilla.jpg" alt=" foto de la tortilla de patata de la abuela."></img>
         </div>
         <div class="torti">
-          <h1>Elaboración de la Tortilla de patata</h1>
+
           <p> Primer freimos las patatas en aceite caliente y añadimos sal al gusto. Mientras se frien batimos los huevos con sal al gusto. Al terminar de freirse las patatas, las metemos dentro del huevo batido, y dejamos reposar. Ponemos a calentar una sartén con un poco de aceite y cuando esté bien caliente echamos el la mezcla. Vamos haciendo agujeros en el fondo de nuestro tortilla para que se filtre bien el huevo a la parte baja, y cuando quede poco huevo sin freirse, le damos la vuelta a la tortilla con ayuda de un plato y dejamos reposar 3 min en el fuego. La sacamos de la sartén y dejamos reposar 5 min para que quede perfecta.</p>
+          <a href="webRecetasNoAccesible.html">Vuelve a la home</a>
         </div>
 
   </body>
