--- a/EntregaDiseño/webAccesibilidad/webRecetasNoAccesible.html
+++ b/EntregaDiseño/webAccesibilidad/webRecetasNoAccesible.html
@@ -35,7 +35,7 @@
   <body>
     <div id="titulo">
       <div id="texto">
-        
+
         <h1>Recetas de la abuela</h1>
         <p>Como en casa en ningún sitio!</p>
       </div>
@@ -131,6 +131,7 @@
 <p class="oculta">Aquí empieza el pie de la página. </p>
 <div id="pie">
 <ul>
+<li><img src="icono.svg" alt="Este icono nos desmuestra que nuestra web es accesible con un nivel AA"></li>
   <!-- Aquí van los iconos de accesibilidad y la explicación sobre accesibilidad -->
 </ul>
 </div>
