--- a/EntregaDiseño/webAccesibilidad/webRecetasNoAccesible.html
+++ b/EntregaDiseño/webAccesibilidad/webRecetasNoAccesible.html
@@ -80,7 +80,7 @@
 <h2>Entrantes y Primeros platos</h2>
 <h3>Aperitivos, ensaladas, sopas y cremas.</h3>
 <ul>
-	<li><a href="#">Tortilla de la abuela</a></li>
+	<li><a href="tortillaPatata.html">Tortilla de Patata</a></li>
   <li><a href="#">Sopa castellana</a></li>
   <li><a href="#">Crema de calabaza</a></li>
   <li><a href="#">Champiñones rellenos</a></li>
