--- a/Proyecto Cibeles/Web/javascript/prueba.html
+++ b/Proyecto Cibeles/Web/javascript/prueba.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="funciones.js" charset="utf-8"></script>
+
+    <script src="js/jquery-3.2.1.min.js" charset="utf-8"></script>
+    <script src="funcionesLogin.js" charset="utf-8"></script>
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
+    <button id="bot">boton</button>
+    <ul>
+      <li>noticias</li>
+      <li>contacta</li>
+      <li>trabajadores</li>
+    </ul>
+  <!--  Formulario trabajadores -->
+    <form action="#" method="post">
+      Nombre <input id="nombre"> <br>
+      Contraseña <input id="contra">
+      <input type="submit" value="Enviar" id="enviar"></input>
+    </form>
+    <div id="mostrar">
 
+    </div>
 
-    
   </body>
 </html>
